--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/walk8243/Express-Generator#readme",
   "dependencies": {
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.9.2",
+    "uglify-js": "^3.4.6"
   }
 }
