--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/walk8243/Express-Generator.git"
   },
   "author": "walk8243",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/walk8243/Express-Generator/issues"
   },
@@ -19,5 +19,6 @@
   "dependencies": {
     "node-sass": "^4.9.2",
     "uglify-js": "^3.4.6"
-  }
+  },
+  "devDependencies": {}
 }
