--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "express-generator",
+  "name": "walk8243-expac",
   "version": "1.0.0",
-  "description": "ExpressアプリケーションをSHで簡単セットアップ",
+  "description": "Express Application Create ~ExpressアプリケーションをSHで簡単セットアップ~",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/walk8243/Express-Generator.git"
   },
-  "author": "walk8243",
+  "author": "Esaka Nobuyasu <walk8243@gmail.com> (https://qiita.com/walk8243)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/walk8243/Express-Generator/issues"
