--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/walk8243/Express-Generator.git"
   },
-  "author": "Esaka Nobuyasu <walk8243@gmail.com> (https://qiita.com/walk8243)",
+  "author": "walk8243 (https://qiita.com/walk8243)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/walk8243/Express-Generator/issues"
