--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "homepage": "https://github.com/walk8243/Express-Generator#readme",
   "dependencies": {
+    "init-package-json": "^1.10.3",
     "node-sass": "^4.9.2",
     "uglify-js": "^3.4.6"
   },
