--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "init-package-json": "^1.10.3",
     "node-sass": "^4.9.2",
-    "uglify-js": "^3.4.6"
+    "uglify-js": "^3.4.6",
+    "walk8243-logger": "^1.2.1"
   },
   "devDependencies": {}
 }
